# russia-tv-autotests

./: .env.example  .gitignore  .mcp.json  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  cliff.toml  conftest.py  docker-compose.yml  index.html  package.json  pyproject.toml  setup.cfg
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: allure-pages.yml  ci.yml  cross-browser.yml
allure/: categories.json  environment.properties  index.html
allure/data/: behaviors.csv  behaviors.json  categories.json  packages.json  suites.csv  suites.json  timeline.json
allure/data/attachments/: 105f241a58d78dc9.txt  128d6ff15eb31aba.txt  12d1af43836a077.txt  1482e1e316e0e20.txt  (+171 more)
allure/export/: influxDbData.txt  prometheusData.txt
allure/history/: history-trend.json  history.json  retry-trend.json
allure/widgets/: duration-trend.json  severity.json  status-chart.json  suites.json  summary.json
api/: channel_api.py  schedule_api.py  search_api.py
config/: browsers.py  environments.py  remote.py  settings.py
core/: base_api.py  base_page.py  browser_manager.py  exceptions.py  logger.py  self_healing.py  test_data_loader.py
docs/: API_DOCUMENTATION.md  BUG_REPORTS.md  PAGE_OBJECTS.md  TEST_PLAN.md
pages/: category_page.py  channel_page.py  home_page.py  schedule_page.py
pages/components/: navigation.py
reports/: mobile_analysis.json
scripts/: analyze_links.py  analyze_mobile.py  analyze_mobile_v2.py  generate_perf_dashboard.py
test_data/: channels.json  factories.py  search_queries.json
tests/e2e/: test_accessibility.py  test_channel_detail.py  test_channel_filtering.py  test_chaos_resilience.py  test_cookie_consent.py  test_dark_mode.py  test_date_picker.py  test_empty_states.py  test_error_pages.py  test_footer_links.py  test_home_page.py  test_keyboard_navigation.py  test_load_more.py  test_mobile_home.py  test_mobile_navigation.py  test_performance_vitals.py  test_responsive.py  test_schedule_navigation.py  test_search_edge_cases.py  test_seo_meta.py  test_state_navigation.py  test_visual_regression.py
tests/integration/: test_api_channels.py  test_api_schedule.py  test_api_search.py  test_performance_budget.py  test_site_availability.py
tests/smoke/: __init__.py  test_critical_paths.py
tests/unit/: test_date_helpers.py  test_exceptions.py
utils/: date_helpers.py  image_diff.py  screenshot_utils.py
(+1534 files in other folders)
